github link fixed. character overflow on screen fixed. added two screens to handle result and calculation. calculation now takes place right to left

--- a/style.css
+++ b/style.css
@@ -49,7 +49,49 @@ h1:hover {
     font-weight: 950; 
 }
 
-.screen {
+#screen-bottom {
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center;
+    width: 100%;
+    height: 100px;
+    background-color: #f7caca;
+    text-align: right;
+    font-size: 3.5rem;
+    font-family: 'Orbitron', sans-serif;
+    font-style: italic;
+    border: none;
+    margin-bottom: 20px;
+    padding-right: 30px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    direction: ltr;
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+#screen-top {
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background-color: #f7caca;
+    text-align: right;
+    font-size: 1rem;
+    font-family: 'Orbitron', sans-serif;
+    font-style: italic;
+    border: none;
+    padding-right: 30px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    direction: ltr;
+    overflow-x: auto;
+    white-space: nowrap; 
+}
+
+
+/* .screen {
     display: flex;
     justify-content: flex-start; 
     align-items: center;
@@ -63,7 +105,7 @@ h1:hover {
     margin-bottom: 20px;
     padding-left: 10px; 
     border-radius: 25px;
-}
+} */
 
 .buttons-container {
     display: grid;
